no funciona aun correctamente el match

--- a/index.html
+++ b/index.html
@@ -11,51 +11,52 @@
 
 <body>
     <main class="container">
+        <div><img src="assets/imagenes/logo.png" alt="Logo geobizi" class="logo-main" /></div>
         <h1>Nendo Dango - Bombas de semillas</h1>
         <p>¿Quieres poner a prueba tus conocimientos sobre bombas de semillas?</p>
         <p>Si quieres, puedes descargar los documentos y usa la información para completar el quiz o jugar.</p>
         <p>Si estás en la actividad con nosotros puedes llevarte un regalo extra si aciertas todas las preguntas.</p>
-        
-        <nav class="actions">
-            <a class="btn" href="quiz.html">Iniciar quiz</a>
-            <a class="btn" href="juego.html">Mini‑juego (plantilla)</a>
-        </nav>     
 
-        <section class="downloads">
+        <div>
+            <h1>Mini Juegos y quiz</h1>
+            <p>Elige el juego que mas te apetezca:</p>
+            <button class="btn" onclick="location.href='juegos/quiz/quiz.html'">Juego de Preguntas</button>
+            <button class="btn" onclick="location.href='juegos/match/match.html'">Emparejar Imágenes</button>
+        </div>
+
+        <div class="bloque">
             <h2>Descargas</h2>
-            <a class="btn secondary" href="Documentos/Bombas-de-semillas.pdf" target="_blank" download>Bombas de semillas</a>
-            <a class="btn secondary" href="Documentos/Semillas.pdf" target="_blank" download>Semillas</a>
-        </section>
-
-
-
+            <button class="btn"><a class="nolink" href="Documentos/Bombas-de-semillas.pdf" target="_blank" download>Bombas de semillas</a></button>
+            <button class="btn"><a class="nolink" href="Documentos/Semillas.pdf" target="_blank" download>Semillas</a></button>
+        </div>
 
     </main>
-            <footer>
-            <div class="footer-content">
-                <div class="social-media">
-                    <a href="https://www.geobizi.com" alt="Geobizi Web"> 
-                        <img src="assets/icons/web.png" alt="Geobizi" class="social-icon" />
-                    </a>
-                    <a href="mailto:geobizi@hotmail.com">
-                        <img src="assets/icons/mail.png" alt="Email" class="social-icon" />
-                    </a>
-                    <a href="tel:+34677170921">
-                        <img src="assets/icons/telephone.png" alt="Phone" class="social-icon" />
-                    </a>
-                    <a href="https://www.facebook.com/geobizirik/" target="_blank" rel="noopener noreferrer">
-                        <img src="assets/icons/facebook.png" alt="Facebook" class="social-icon" />
-                    </a>
-                    <a href="https://www.youtube.com/channel/UCw-C_J0y-jKHp7Zx92lsKfg" target="_blank" rel="noopener noreferrer">
-                        <img src="assets/icons/youtube.png" alt="YouTube" class="social-icon" />
-                    </a>
-                    <a href="https://www.instagram.com/geotxiki/" target="_blank" rel="noopener noreferrer">
-                        <img src="assets/icons/instagram.png" alt="Instagram" class="social-icon" />
-                    </a>
-                </div>
-                <p class="copyright">© Geobizi 2024. Todos los derechos reservados.</p>
+    <footer>
+        <div class="footer-content">
+            <div class="social-media">
+                <a href="https://www.geobizi.com" alt="Geobizi Web">
+                    <img src="assets/icons/web.png" alt="Geobizi" class="social-icon" />
+                </a>
+                <a href="mailto:geobizi@hotmail.com">
+                    <img src="assets/icons/mail.png" alt="Email" class="social-icon" />
+                </a>
+                <a href="tel:+34677170921">
+                    <img src="assets/icons/telephone.png" alt="Phone" class="social-icon" />
+                </a>
+                <a href="https://www.facebook.com/geobizirik/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/icons/facebook.png" alt="Facebook" class="social-icon" />
+                </a>
+                <a href="https://www.youtube.com/channel/UCw-C_J0y-jKHp7Zx92lsKfg" target="_blank"
+                    rel="noopener noreferrer">
+                    <img src="assets/icons/youtube.png" alt="YouTube" class="social-icon" />
+                </a>
+                <a href="https://www.instagram.com/geotxiki/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/icons/instagram.png" alt="Instagram" class="social-icon" />
+                </a>
             </div>
-        </footer>
+            <p class="copyright">© Geobizi 2024. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
