--- a/index.html
+++ b/index.html
@@ -18,28 +18,32 @@
         <p>Si estás en la actividad con nosotros puedes llevarte un regalo extra si aciertas todas las preguntas.</p>
 
         <div>
-            <h1>Mini Juegos y quiz</h1>
+            <h2>Mini Juegos y quiz</h2>
             <p>Elige el juego que mas te apetezca:</p>
             <button class="btn" onclick="location.href='juegos/quiz/quiz.html'">Juego de Preguntas</button>
             <button class="btn" onclick="location.href='juegos/match/match.html'">Emparejar Imágenes</button>
+            <button class="btn" onclick="location.href='juegos/memory/memory.html'">Memory de Flores</button>
         </div>
 
         <div class="bloque">
             <h2>Descargas</h2>
-            <button class="btn"><a class="nolink" href="Documentos/Bombas-de-semillas.pdf" target="_blank" download>Bombas de semillas</a></button>
-            <button class="btn"><a class="nolink" href="Documentos/Semillas.pdf" target="_blank" download>Semillas</a></button>
+            <button class="btn"><a class="nolink" href="Documentos/Bombas-de-semillas.pdf" target="_blank"
+                    download>Bombas de semillas</a></button>
+            <button class="btn"><a class="nolink" href="Documentos/Semillas.pdf" target="_blank"
+                    download>Semillas</a></button>
         </div>
 
     </main>
     <footer>
         <div class="footer-content">
             <div class="social-media">
-                <a href="https://www.geobizi.com" alt="Geobizi Web">
+                <a href="https://www.geobizi.com" target="_blank" alt="Geobizi Web">
                     <img src="assets/icons/web.png" alt="Geobizi" class="social-icon" />
                 </a>
-                <a href="mailto:geobizi@hotmail.com">
+                <a href="mailto:geobizi@hotmail.com" class="mail-link">
                     <img src="assets/icons/mail.png" alt="Email" class="social-icon" />
                 </a>
+
                 <a href="tel:+34677170921">
                     <img src="assets/icons/telephone.png" alt="Phone" class="social-icon" />
                 </a>
@@ -54,6 +58,7 @@
                     <img src="assets/icons/instagram.png" alt="Instagram" class="social-icon" />
                 </a>
             </div>
+            <small>geobizi@hotmail.com</small>
             <p class="copyright">© Geobizi 2024. Todos los derechos reservados.</p>
         </div>
     </footer>
