mejorando el memory

--- a/juegos/memory/memory.html
+++ b/juegos/memory/memory.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Juego Memory - Flores</title>
-  <link rel="stylesheet" href="memory.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Juego Memory - Flores</title>
+    <link rel="stylesheet" href="memory.css">
 </head>
+
 <body>
-  <header class="menu-header">
-    <button id="menu-button" class="menu-button">🏡 Volver al menú</button>
-  </header>
+    <header class="menu-header">
+        <button id="menu-button" class="menu-button">🏡 Volver al menú</button>
+    </header>
 
-  <main>
-    <h1>🌸 Juego de Memoria: Flores 🌼</h1>
-    <div id="memory-board"></div>
-  </main>
+    <main>
+        <h1>🌸 Juego de Memoria: Flores 🌼</h1>
+        <div id="memory-board"></div>
+    </main>
 
-  <div id="message-box">
-    <p id="message-text"></p>
-    <button id="next-level">Siguiente nivel</button>
-  </div>
+    <!-- Popup para mensajes -->
+    <div id="message-box">
+        <p id="message-text"></p>
+        <button id="next-level">Siguiente nivel</button>
+    </div>
 
-  <script src="memory.js"></script>
+    <script src="memory.js"></script>
 </body>
+
 </html>
