titulo sin raya

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="container">
         <div><img src="assets/imagenes/logo.png" alt="Logo geobizi" class="logo-main" /></div>
-        <h1>Nendo Dango - Bombas de semillas</h1>
+        <h1>Nendo Dango Bombas de semillas</h1>
         <p>¿Quieres poner a prueba tus conocimientos sobre bombas de semillas?</p>
         <p>Si quieres, puedes descargar los documentos y usa la información para completar el quiz o jugar.</p>
         <p>Si estás en la actividad con nosotros puedes llevarte un regalo extra si aciertas todas las preguntas.</p>
